--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🚀EARN WITH PRINCE </title>
+  <title>🚀EARN WITH PRINCE</title>
 
-  <!-- SEO -->
   <meta name="description" content="Join Win VIP Game Official Telegram Channel. Get daily winning tips, instant updates and trusted results. Mobile friendly landing page." />
   <meta name="keywords" content="win vip game, telegram game tips, colour prediction, earning game, vip game telegram" />
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Meta Pixel Code -->
   <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -25,10 +22,6 @@
   fbq('init', '1252754346705398');
   fbq('track', 'PageView');
   </script>
-  <noscript>
-    <img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1252754346705398&ev=PageView&noscript=1"/>
-  </noscript>
 
   <style>
     *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
@@ -47,10 +40,13 @@
       text-align:center;padding:25px 15px;color:#fff
     }
     .logo{
-      width:90px;height:90px;border-radius:50%;object-fit:cover;
-      border:4px solid #fff;margin-bottom:10px
+      width:90px;
+      height:90px;
+      border-radius:50%;
+      object-fit:cover;
+      border:4px solid #fff;
+      margin-bottom:10px
     }
-    .header h1{font-size:22px;font-weight:700}
     .header p{font-size:15px;font-weight:700;text-transform:uppercase}
 
     .content{padding:20px;text-align:center}
@@ -94,11 +90,15 @@
     }
   </style>
 </head>
+
 <body>
 
 <div class="container">
   <div class="header">
-    <img src="https://i.ibb.co/7NZC3vYj/Screenshot-2026-01-01-102527.png" class="logo">
+    <!-- New Image Added -->
+    <img src="https://i.ibb.co/HDbXHHjQ/Whats-App-Image-2026-02-28-at-12-15-01-PM.jpg" 
+         class="logo" 
+         alt="Profile Photo">
     <p>⭐ Daily Profit VIP Channel ⭐</p>
   </div>
 
@@ -110,14 +110,13 @@
     <p>Join our official Telegram channel and get fast, accurate and trusted game tips directly on your mobile.</p>
 
     <ul class="features">
-      <li>FREE HACK ACCESS </li>
+      <li>FREE HACK ACCESS</li>
       <li>Daily Profit Strategies</li>
       <li>Daily Gift Code Free</li>
       <li>Free to Join Telegram</li>
     </ul>
 
-    <!-- Telegram Button (NO BOT PROTECTION) -->
-    <a href="https://t.me/+2j4IvI539kQ2ZDg9
+    <a href="https://t.me/+2j4IvI539kQ2ZDg9" 
        target="_blank"
        class="cta-btn"
        onclick="fbq('track','Lead')">
@@ -133,7 +132,6 @@
 </div>
 
 <script>
-  // Fake live counter
   let count = 12873;
   setInterval(() => {
     count += Math.floor(Math.random() * 3) + 1;
