--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
       color:#fff;text-decoration:none;font-size:17px;
       font-weight:600;border-radius:10px;
       margin-bottom:12px;
-      animation:pulse 1.5s infinite
+      animation:pulse 1.5s infinite;
+      border:none;
+      cursor:pointer;
     }
 
     @keyframes pulse{
@@ -123,12 +125,9 @@
       <li>Free to Join Telegram</li>
     </ul>
 
-    <a href="https://t.me/+2j4IvI539kQ2ZDg9" 
-       target="_blank"
-       class="cta-btn"
-       onclick="fbq('track','Lead', {content_name: 'Telegram Join Button'});">
-       🚀 Join Telegram Channel
-    </a>
+    <button class="cta-btn" onclick="trackLead()">
+      🚀 Join Telegram Channel
+    </button>
 
     <p class="note">⚠️ Play responsibly. This channel is for information only.</p>
   </div>
@@ -144,6 +143,16 @@
     count += Math.floor(Math.random() * 3) + 1;
     document.getElementById('count').innerText = count;
   }, 2000);
+
+  function trackLead() {
+    fbq('track', 'Lead', {
+      content_name: 'Telegram Join Button'
+    });
+
+    setTimeout(function() {
+      window.open('https://t.me/+2j4IvI539kQ2ZDg9', '_blank');
+    }, 500);
+  }
 </script>
 
 </body>
