--- a/index.html
+++ b/index.html
@@ -1,150 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🚀EARN WITH PRINCE</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Join Win VIP Game Official Telegram Channel. Get daily winning tips, instant updates and trusted results. Mobile friendly landing page." />
-  <meta name="keywords" content="win vip game, telegram game tips, colour prediction, earning game, vip game telegram" />
+<title>TASAN WIN VIP – Premium Sure Shot Tips, Loss Recovery, Bonus & More</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Meta Pixel Code -->
-  <script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
 
-  fbq('init', '1192655042949284');
-  fbq('track', 'PageView');
-  </script>
+<!-- SEO Meta Tags -->
+<meta name="title" content="TASAN WIN VIP – Premium Sure Shot Tips & Daily Signals">
+<meta name="description" content="Join TASAN WIN VIP for premium signals, sure shot predictions, daily tips, loss recovery & ₹1000 bonus. Join our exclusive Telegram channel now!">
+<meta name="keywords" content="tasan win, win tips, telegram vip, premium tips, signals, loss recovery, bonus, sure shot, vip channel">
+<meta name="robots" content="index, follow">
 
-  <noscript>
-  <img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1192655042949284&ev=PageView&noscript=1"/>
-  </noscript>
-  <!-- End Meta Pixel Code -->
+<!-- Social Share (Open Graph) -->
+<meta property="og:title" content="TASAN WIN VIP – Premium Sure Shot & Daily Tips">
+<meta property="og:description" content="Join our VIP Channel for daily winning tips, premium signals & ₹1000 bonus.">
+<meta property="og:url" content="https://tasanwinvipzandee.vercel.app/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://tasanwinvipzandee.vercel.app/og-image.png">
 
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
-    body{
-      background:linear-gradient(135deg,#141E30,#243B55);
-      min-height:100vh;display:flex;justify-content:center;align-items:center;
-      padding:15px;color:#fff
-    }
-    .container{
-      max-width:420px;width:100%;background:#fff;color:#222;
-      border-radius:18px;overflow:hidden;
-      box-shadow:0 15px 40px rgba(0,0,0,.35)
-    }
-    .header{
-      background:linear-gradient(135deg,#ff416c,#ff4b2b);
-      text-align:center;padding:25px 15px;color:#fff
-    }
-    .logo{
-      width:90px;
-      height:90px;
-      border-radius:50%;
-      object-fit:cover;
-      border:4px solid #fff;
-      margin-bottom:10px
-    }
-    .header p{font-size:15px;font-weight:700;text-transform:uppercase}
 
-    .content{padding:20px;text-align:center}
-    .badge{
-      display:inline-block;background:#e8f7ee;color:#1e8449;
-      padding:6px 12px;border-radius:20px;font-size:13px;
-      font-weight:600;margin-bottom:10px
-    }
-    .counter{font-size:15px;font-weight:700;color:#ff5722;margin-bottom:15px}
-    .content h2{font-size:20px;margin-bottom:10px;color:#111}
-    .content p{font-size:14px;color:#555;margin-bottom:18px;line-height:1.6}
 
-    .features{text-align:left;margin-bottom:20px}
-    .features li{
-      list-style:none;font-size:14px;margin-bottom:8px;
-      padding-left:22px;position:relative;color:#333
-    }
-    .features li::before{
-      content:'✔';position:absolute;left:0;color:#28a745;font-weight:bold
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap');
+
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
+
+    body {
+        background: #000;
+        color: #fff;
+        overflow-x: hidden;
     }
 
-    .cta-btn{
-      display:block;width:100%;padding:14px;
-      background:linear-gradient(135deg,#0088cc,#00aaff);
-      color:#fff;text-decoration:none;font-size:17px;
-      font-weight:600;border-radius:10px;
-      margin-bottom:12px;
-      animation:pulse 1.5s infinite;
-      border:none;
-      cursor:pointer;
-      text-align:center;
+    .bg-animated {
+        position: fixed;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: linear-gradient(45deg, #ff00ff, #00eaff, #ffae00, #00ff6a, #8b00ff, #ff0040);
+        background-size: 500% 500%;
+        animation: gradientMove 10s ease infinite, rotate3D 12s linear infinite;
+        z-index: -2;
+        filter: blur(80px);
+        transform-style: preserve-3d;
     }
 
-    @keyframes pulse{
-      0%{box-shadow:0 0 0 0 rgba(0,136,204,.6)}
-      70%{box-shadow:0 0 0 12px rgba(0,136,204,0)}
-      100%{box-shadow:0 0 0 0 rgba(0,136,204,0)}
+    @keyframes gradientMove {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
     }
 
-    .note{font-size:12px;color:#777}
-    .footer{
-      background:#f5f5f5;text-align:center;
-      padding:10px;font-size:12px;color:#666
+    @keyframes rotate3D {
+        0% { transform: perspective(800px) rotateX(0deg) rotateY(0deg); }
+        50% { transform: perspective(800px) rotateX(20deg) rotateY(20deg); }
+        100% { transform: perspective(800px) rotateX(0deg) rotateY(0deg); }
     }
-  </style>
+
+    .hero { text-align: center; padding: 120px 20px; }
+
+    .title {
+        font-size: 55px;
+        font-weight: 800;
+        background: linear-gradient(45deg, #ff00ff, #00e5ff, #ffae00);
+        -webkit-background-clip: text;
+        color: transparent;
+        animation: float 3s ease-in-out infinite;
+    }
+    @keyframes float { 0% { transform: translateY(0);} 50% { transform: translateY(-10px);} 100% { transform: translateY(0);} }
+
+    .subtitle {
+        margin-top: 12px;
+        font-size: 22px;
+        opacity: 0.9;
+        color: #ff4444;
+        font-weight:600;
+        text-shadow:0 0 12px #ff4444;
+    }
+
+    .btn {
+        display: inline-block;
+        margin-top: 30px;
+        padding: 16px 50px;
+        font-size: 20px;
+        font-weight: 700;
+        background: linear-gradient(45deg, #ff00cc, #2d2dff);
+        border-radius: 50px;
+        text-decoration: none;
+        color: white;
+        box-shadow: 0 0 25px rgba(255, 0, 200, 0.7);
+        transition: 0.3s;
+    }
+
+    .btn:hover { transform: scale(1.15); }
+
+    .features {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 20px;
+        padding: 70px 20px;
+        max-width: 1100px;
+        margin: auto;
+    }
+
+    .box {
+        background: rgba(255,255,255,0.08);
+        border: 1px solid rgba(255,255,255,0.2);
+        border-radius: 20px;
+        padding: 20px;
+        backdrop-filter: blur(12px);
+        transition: 0.35s;
+    }
+
+    .box:hover { transform: translateY(-10px) scale(1.03); }
+
+    .box h3 { font-size: 20px; color: #00eaff; margin-bottom: 8px; }
+    .box p { opacity: 0.85; font-size: 14px; }
+
+    .final { text-align: center; padding: 80px 20px; }
+    .final h2 { font-size: 36px; font-weight: 800; }
+    .final p { margin-top: 5px; opacity: 0.8; font-size: 18px; }
+
+    .footer { text-align: center; padding: 20px; opacity: 0.6; font-size: 14px; }
+
+</style>
 </head>
 
 <body>
 
-<div class="container">
-  <div class="header">
-    <img src="https://i.ibb.co/HDbXHHjQ/Whats-App-Image-2026-02-28-at-12-15-01-PM.jpg" 
-         class="logo" 
-         alt="Profile Photo">
-    <p>⭐ Daily Profit VIP Channel ⭐</p>
-  </div>
+<div class="bg-animated"></div>
 
-  <div class="content">
-    <div class="badge">✅ Trusted & Active</div>
-    <div class="counter">🔥 <span id="count">12873</span>+ Active Members</div>
+<section class="hero">
+    <h1 class="title">JOIN VIP TASAN WIN CHANNEL</h1>
+    <p class="subtitle">
+        1. Sure Shots 💸<br>
+        2. Daily Premium Tips 💸<br>
+        3. Loss Recovery 💸<br>
+        4. Bonus up to ₹1000 💸
+    </p>
+    <a class="btn" href="https://t.me/+2khzaRnsSZhiYzI1">Join Now</a>
+</section>
 
-    <h2>Daily Winning Tips 💰</h2>
-    <p>Join our official Telegram channel and get fast, accurate and trusted game tips directly on your mobile.</p>
+<section class="features">
+    <div class="box">
+        <h3>💎 Ultra Premium Tips</h3>
+        <p>Fast & accurate signals directly from professionals.</p>
+    </div>
+    <div class="box">
+        <h3>⚡ Instant Alerts</h3>
+        <p>Notification within seconds. Zero delays.</p>
+    </div>
+    <div class="box">
+        <h3>🛡 Loss Recovery Plans</h3>
+        <p>Safe money management & recovery-based entries.</p>
+    </div>
+    <div class="box">
+        <h3>🎁 Rewards & Bonus</h3>
+        <p>Earn up to ₹1000 joining bonus + extra gifts.</p>
+    </div>
+</section>
 
-    <ul class="features">
-      <li>FREE HACK ACCESS</li>
-      <li>Daily Profit Strategies</li>
-      <li>Daily Gift Code Free</li>
-      <li>Free to Join Telegram</li>
-    </ul>
+<section class="final">
+    <h2>Start Growing Faster Today</h2>
+    <p>Join thousands of daily VIP members now.</p>
+    <a class="btn" href="https://t.me/+2khzaRnsSZhiYzI1">Join Free VIP Channel</a>
+</section>
 
-    <a href="https://t.me/+2j4IvI539kQ2ZDg9" target="_blank" class="cta-btn">
-      🚀 Join Telegram Channel
-    </a>
-
-    <p class="note">⚠️ Play responsibly. This channel is for information only.</p>
-  </div>
-
-  <div class="footer">
-    © 2026 Win VIP Game | All Rights Reserved
-  </div>
-</div>
-
-<script>
-  let count = 12873;
-  setInterval(() => {
-    count += Math.floor(Math.random() * 3) + 1;
-    document.getElementById('count').innerText = count;
-  }, 2000);
-</script>
+<div class="footer">© 2025 VIP Premium — All Rights Reserved</div>
 
 </body>
 </html>
