--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>TASAN WIN VIP – Premium Sure Shot Tips, Loss Recovery, Bonus & More</title>
+<title>EARN WITH PRINCE /title>
 
 
 
