--- a/index.html
+++ b/index.html
@@ -4,125 +4,139 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>EARN WITH PRINCE /title>
+<title>EARN WITH PRINCE </title>
 
+<
 
-
-<!-- SEO Meta Tags -->
 <meta name="title" content="TASAN WIN VIP – Premium Sure Shot Tips & Daily Signals">
 <meta name="description" content="Join TASAN WIN VIP for premium signals, sure shot predictions, daily tips, loss recovery & ₹1000 bonus. Join our exclusive Telegram channel now!">
 <meta name="keywords" content="tasan win, win tips, telegram vip, premium tips, signals, loss recovery, bonus, sure shot, vip channel">
 <meta name="robots" content="index, follow">
 
-<!-- Social Share (Open Graph) -->
 <meta property="og:title" content="TASAN WIN VIP – Premium Sure Shot & Daily Tips">
 <meta property="og:description" content="Join our VIP Channel for daily winning tips, premium signals & ₹1000 bonus.">
 <meta property="og:url" content="https://tasanwinvipzandee.vercel.app/">
 <meta property="og:type" content="website">
 <meta property="og:image" content="https://tasanwinvipzandee.vercel.app/og-image.png">
 
-
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1161481219520537');
+fbq('track', 'PageView');
+</script>
 
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap');
 
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
+* { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
 
-    body {
-        background: #000;
-        color: #fff;
-        overflow-x: hidden;
-    }
+body {
+    background: #000;
+    color: #fff;
+    overflow-x: hidden;
+}
 
-    .bg-animated {
-        position: fixed;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        background: linear-gradient(45deg, #ff00ff, #00eaff, #ffae00, #00ff6a, #8b00ff, #ff0040);
-        background-size: 500% 500%;
-        animation: gradientMove 10s ease infinite, rotate3D 12s linear infinite;
-        z-index: -2;
-        filter: blur(80px);
-        transform-style: preserve-3d;
-    }
+.bg-animated {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: linear-gradient(45deg, #ff00ff, #00eaff, #ffae00, #00ff6a, #8b00ff, #ff0040);
+    background-size: 500% 500%;
+    animation: gradientMove 10s ease infinite, rotate3D 12s linear infinite;
+    z-index: -2;
+    filter: blur(80px);
+    transform-style: preserve-3d;
+}
 
-    @keyframes gradientMove {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
-    }
+@keyframes gradientMove {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
 
-    @keyframes rotate3D {
-        0% { transform: perspective(800px) rotateX(0deg) rotateY(0deg); }
-        50% { transform: perspective(800px) rotateX(20deg) rotateY(20deg); }
-        100% { transform: perspective(800px) rotateX(0deg) rotateY(0deg); }
-    }
+@keyframes rotate3D {
+    0% { transform: perspective(800px) rotateX(0deg) rotateY(0deg); }
+    50% { transform: perspective(800px) rotateX(20deg) rotateY(20deg); }
+    100% { transform: perspective(800px) rotateX(0deg) rotateY(0deg); }
+}
 
-    .hero { text-align: center; padding: 120px 20px; }
+.hero { text-align: center; padding: 120px 20px; }
 
-    .title {
-        font-size: 55px;
-        font-weight: 800;
-        background: linear-gradient(45deg, #ff00ff, #00e5ff, #ffae00);
-        -webkit-background-clip: text;
-        color: transparent;
-        animation: float 3s ease-in-out infinite;
-    }
-    @keyframes float { 0% { transform: translateY(0);} 50% { transform: translateY(-10px);} 100% { transform: translateY(0);} }
+.title {
+    font-size: 55px;
+    font-weight: 800;
+    background: linear-gradient(45deg, #ff00ff, #00e5ff, #ffae00);
+    -webkit-background-clip: text;
+    color: transparent;
+    animation: float 3s ease-in-out infinite;
+}
 
-    .subtitle {
-        margin-top: 12px;
-        font-size: 22px;
-        opacity: 0.9;
-        color: #ff4444;
-        font-weight:600;
-        text-shadow:0 0 12px #ff4444;
-    }
+@keyframes float {
+    0% { transform: translateY(0);}
+    50% { transform: translateY(-10px);}
+    100% { transform: translateY(0);}
+}
 
-    .btn {
-        display: inline-block;
-        margin-top: 30px;
-        padding: 16px 50px;
-        font-size: 20px;
-        font-weight: 700;
-        background: linear-gradient(45deg, #ff00cc, #2d2dff);
-        border-radius: 50px;
-        text-decoration: none;
-        color: white;
-        box-shadow: 0 0 25px rgba(255, 0, 200, 0.7);
-        transition: 0.3s;
-    }
+.subtitle {
+    margin-top: 12px;
+    font-size: 22px;
+    opacity: 0.9;
+    color: #ff4444;
+    font-weight:600;
+    text-shadow:0 0 12px #ff4444;
+}
 
-    .btn:hover { transform: scale(1.15); }
+.btn {
+    display: inline-block;
+    margin-top: 30px;
+    padding: 16px 50px;
+    font-size: 20px;
+    font-weight: 700;
+    background: linear-gradient(45deg, #ff00cc, #2d2dff);
+    border-radius: 50px;
+    text-decoration: none;
+    color: white;
+    box-shadow: 0 0 25px rgba(255, 0, 200, 0.7);
+    transition: 0.3s;
+}
 
-    .features {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 20px;
-        padding: 70px 20px;
-        max-width: 1100px;
-        margin: auto;
-    }
+.btn:hover { transform: scale(1.15); }
 
-    .box {
-        background: rgba(255,255,255,0.08);
-        border: 1px solid rgba(255,255,255,0.2);
-        border-radius: 20px;
-        padding: 20px;
-        backdrop-filter: blur(12px);
-        transition: 0.35s;
-    }
+.features {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    padding: 70px 20px;
+    max-width: 1100px;
+    margin: auto;
+}
 
-    .box:hover { transform: translateY(-10px) scale(1.03); }
+.box {
+    background: rgba(255,255,255,0.08);
+    border: 1px solid rgba(255,255,255,0.2);
+    border-radius: 20px;
+    padding: 20px;
+    backdrop-filter: blur(12px);
+    transition: 0.35s;
+}
 
-    .box h3 { font-size: 20px; color: #00eaff; margin-bottom: 8px; }
-    .box p { opacity: 0.85; font-size: 14px; }
+.box:hover { transform: translateY(-10px) scale(1.03); }
 
-    .final { text-align: center; padding: 80px 20px; }
-    .final h2 { font-size: 36px; font-weight: 800; }
-    .final p { margin-top: 5px; opacity: 0.8; font-size: 18px; }
+.box h3 { font-size: 20px; color: #00eaff; margin-bottom: 8px; }
+.box p { opacity: 0.85; font-size: 14px; }
 
-    .footer { text-align: center; padding: 20px; opacity: 0.6; font-size: 14px; }
+.final { text-align: center; padding: 80px 20px; }
+.final h2 { font-size: 36px; font-weight: 800; }
+.final p { margin-top: 5px; opacity: 0.8; font-size: 18px; }
+
+.footer { text-align: center; padding: 20px; opacity: 0.6; font-size: 14px; }
 
 </style>
 </head>
@@ -139,7 +153,7 @@
         3. Loss Recovery 💸<br>
         4. Bonus up to ₹1000 💸
     </p>
-    <a class="btn" href="https://t.me/+2khzaRnsSZhiYzI1">Join Now</a>
+    <a class="btn" href="https://t.me/+2j4IvI539kQ2ZDg9">Join Now</a>
 </section>
 
 <section class="features">
@@ -164,7 +178,7 @@
 <section class="final">
     <h2>Start Growing Faster Today</h2>
     <p>Join thousands of daily VIP members now.</p>
-    <a class="btn" href="https://t.me/+2khzaRnsSZhiYzI1">Join Free VIP Channel</a>
+    <a class="btn" href="https://t.me/+2j4IvI539kQ2ZDg9">Join Free VIP Channel</a>
 </section>
 
 <div class="footer">© 2025 VIP Premium — All Rights Reserved</div>
