Fix HTML title and update Facebook Pixel ID

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>EARN WITH PRINCE </title>
-
-
+<title>EARN WITH PRINCE</title>
 
 <meta name="title" content="TASAN WIN VIP – Premium Sure Shot Tips & Daily Signals">
 <meta name="description" content="Join TASAN WIN VIP for premium signals, sure shot predictions, daily tips, loss recovery & ₹1000 bonus. Join our exclusive Telegram channel now!">
@@ -19,6 +17,7 @@
 <meta property="og:type" content="website">
 <meta property="og:image" content="https://tasanwinvipzandee.vercel.app/og-image.png">
 
+<!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -28,9 +27,14 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1161481219520537');
+fbq('init', '907097562077709');
 fbq('track', 'PageView');
 </script>
+<noscript>
+<img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=907097562077709&ev=PageView&noscript=1"/>
+</noscript>
+<!-- End Meta Pixel Code -->
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap');
@@ -137,7 +141,6 @@ body {
 .final p { margin-top: 5px; opacity: 0.8; font-size: 18px; }
 
 .footer { text-align: center; padding: 20px; opacity: 0.6; font-size: 14px; }
-
 </style>
 </head>
 
